--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "reddit-clone-yt",
   "version": "0.1.0",
-  "private": true,
-  "scripts": {
+  "private": true,  "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "export": "next export",
+    "deploy": "next build && next export && firebase deploy",
     "install:legacy": "npm install --legacy-peer-deps"
   },
   "dependencies": {
